# ESGI-OpenGL_Project

./: .gitignore  CMakeLists.txt  README.md  config.sh.in  main.cpp  run.sh
data/: app.config.json  app.info.json  appinfo.json
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
include/glfw-3.3.8/docs/html/: jquery.js
settings/: config.json
src/: main.cpp
src/core/: window.cpp  window.h
src/core/events/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  eventCallbacks.h  events.h
src/core/math/: math.cpp  math.h  quaternion.cpp  quaternion.h  vector.cpp  vector.h
src/core/rendering/: mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h
src/core/system/: Time.cpp  Time.h
src/core/util/: glUtil.h
src/core/world/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  scene.cpp  scene.h  transform.cpp  transform.h
src/shaders/: basic.frag  basic.glsl  basic.vert  basicShader.glsl  default.glsl
src/util/: FileParser.cpp
